deployments/compute-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: compute
  name: compute
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compute
  template:
    metadata:
      labels:
        app: compute
    spec:
      containers:
      - name: compute
        image: fluxuscontainerregistry.azurecr.io/compute:latest
        ports:
        - containerPort: 5006
        imagePullPolicy: Always
      restartPolicy: Always
