deployments/graphql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: graphql
  name: graphql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphql
  template:
    metadata:
      labels:
        app: graphql
    spec:
      containers:
      - name: graphql
        image: fluxuscontainerregistry.azurecr.io/graphql:latest
      restartPolicy: Always
