deployments/graphql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql
  labels:
    service: graphql
spec:
  selector:
    app: graphql
  ports:
  - port: 8080
    targetPort: 8080
