deployments/math-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: math-api
  labels:
    service: math-api
spec:
  type: ClusterIP
  selector:
    app: math-api
  ports:
  - port: 5000
    targetPort: 5000
